# marker_pose

./: .clang-format  .clang-tidy  CMakeLists.txt  vcpkg.json
apps/: CMakeLists.txt  main.cpp
include/: detector.hpp
src/: CMakeLists.txt  detector.cpp
